# notebookLM2PPT

./: .env.example  .gitignore  Dockerfile  README.md  README_CN.md  README_JP.md  README_TW.md  docker-compose.yml  pyproject.toml  requirements.txt
mcp/: mcp_server.py
src/pdf2ppt/: __init__.py  watermark.py
tests/: test_all.py
web/: app.py
web/static/css/: style.css
web/static/js/: app.js  i18n.js
web/templates/: index.html
